--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
         <section class="section">
             <div class="content-with-image">
                 <div>
+                    <h2>Exemple de projet Figma</h2>
+                    <img src="WhatsApp Image 2025-03-23 à 21.32.05_13a7fd24.jpg" alt="Tendances et évolutions de Figma" class="floating-image">
+                    <img src="WhatsApp Image 2025-03-23 à 21.32.05_1c87c513.jpg" alt="Tendances et évolutions de Figma" class="floating-image">
+                    <img src="64760069e93084646c9ef1b0_6240b4c1b758da4e77e8d874_Open-Graph-figma-meilleur-outil-crA9ation-maquette-web.png" alt="Tendances et évolutions de Figma" class="floating-image">
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="content-with-image">
+                <div>
                     <h2>📚 III- Comment apprendre Figma de A à Z ?</h2>
                     <p>Tu veux maîtriser Figma rapidement ? Voici un plan d’apprentissage détaillé en 3 étapes :</p>
                     <ol>
